-- CRM chuỗi trà sữa, cà phê. Chạy một lần trên database trống.
-- Sinh trực tiếp từ CRM_TraSua_CaPhe.dbml; không có DROP hoặc xóa dữ liệu.
BEGIN;
SET TIME ZONE 'Asia/Ho_Chi_Minh';
CREATE TYPE "vai_tro" AS ENUM (
  'admin',
  'manager',
  'staff',
  'customer'
);

CREATE TYPE "trang_thai_tai_khoan" AS ENUM (
  'active',
  'locked'
);

CREATE TYPE "gioi_tinh" AS ENUM (
  'nam',
  'nu',
  'khac',
  'khong_cung_cap'
);

CREATE TYPE "trang_thai_phan_hoi" AS ENUM (
  'moi',
  'da_xem',
  'da_tiep_thu'
);

CREATE TYPE "trang_thai_khao_sat" AS ENUM (
  'nhap',
  'dang_mo',
  'da_dong'
);

CREATE TABLE "chi_nhanh" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ma_chi_nhanh" varchar(20) UNIQUE NOT NULL,
  "ten_chi_nhanh" varchar(150) NOT NULL,
  "dia_chi" varchar(255) NOT NULL,
  "so_dien_thoai" varchar(20),
  "dang_hoat_dong" boolean NOT NULL DEFAULT true,
  CONSTRAINT "ck_chi_nhanh_ten" CHECK (length(trim(ten_chi_nhanh)) > 0)
);

CREATE TABLE "tai_khoan" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ten_dang_nhap" varchar(100) UNIQUE NOT NULL,
  "mat_khau_hash" varchar(255) NOT NULL,
  "vai_tro" vai_tro NOT NULL DEFAULT 'customer',
  "trang_thai" trang_thai_tai_khoan NOT NULL DEFAULT 'active',
  "chi_nhanh_id" bigint,
  "nguoi_tao_id" bigint,
  "ngay_tao" timestamptz NOT NULL DEFAULT (now()),
  "ngay_cap_nhat" timestamptz NOT NULL DEFAULT (now()),
  CONSTRAINT "ck_tai_khoan_username" CHECK (length(trim(ten_dang_nhap)) >= 3),
  CONSTRAINT "ck_tai_khoan_hash" CHECK (length(mat_khau_hash) >= 20),
  CONSTRAINT "ck_khach_hang_toan_chuoi" CHECK (vai_tro <> 'customer' OR chi_nhanh_id IS NULL)
);

CREATE TABLE "nhom_so_thich" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ten_nhom" varchar(100) UNIQUE NOT NULL,
  "mo_ta" text,
  "dang_su_dung" boolean NOT NULL DEFAULT true,
  CONSTRAINT "ck_so_thich_ten" CHECK (length(trim(ten_nhom)) > 0)
);

CREATE TABLE "khach_hang" (
  "tai_khoan_id" bigint PRIMARY KEY NOT NULL,
  "ma_thanh_vien" varchar(30) UNIQUE NOT NULL,
  "ho_ten" varchar(150) NOT NULL,
  "nam_sinh" smallint NOT NULL,
  "gioi_tinh" gioi_tinh NOT NULL DEFAULT 'khong_cung_cap',
  "so_thich_id" bigint NOT NULL,
  "ngay_cap_nhat" timestamptz NOT NULL DEFAULT (now()),
  CONSTRAINT "ck_khach_hang_ho_ten" CHECK (length(trim(ho_ten)) > 0),
  CONSTRAINT "ck_khach_hang_ma" CHECK (length(trim(ma_thanh_vien)) > 0),
  CONSTRAINT "ck_khach_hang_nam_sinh" CHECK (nam_sinh >= 1900)
);

CREATE TABLE "do_uong" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ma_do_uong" varchar(30) UNIQUE NOT NULL,
  "ten_do_uong" varchar(150) NOT NULL,
  "mo_ta" text,
  "dang_kinh_doanh" boolean NOT NULL DEFAULT true,
  "ngay_tao" timestamptz NOT NULL DEFAULT (now()),
  CONSTRAINT "ck_do_uong_ten" CHECK (length(trim(ten_do_uong)) > 0)
);

CREATE TABLE "phan_hoi" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "khach_hang_id" bigint NOT NULL,
  "do_uong_id" bigint NOT NULL,
  "chi_nhanh_id" bigint,
  "so_sao" smallint NOT NULL,
  "noi_dung" text NOT NULL,
  "trang_thai" trang_thai_phan_hoi NOT NULL DEFAULT 'moi',
  "nguoi_xu_ly_id" bigint,
  "ngay_xu_ly" timestamptz,
  "ngay_gui" timestamptz NOT NULL DEFAULT (now()),
  CONSTRAINT "ck_phan_hoi_so_sao" CHECK (so_sao BETWEEN 1 AND 5),
  CONSTRAINT "ck_phan_hoi_noi_dung" CHECK (length(trim(noi_dung)) > 0),
  CONSTRAINT "ck_phan_hoi_xu_ly" CHECK ((trang_thai = 'moi' AND ngay_xu_ly IS NULL AND nguoi_xu_ly_id IS NULL) OR (trang_thai <> 'moi' AND ngay_xu_ly IS NOT NULL)),
  CONSTRAINT "ck_phan_hoi_thoi_gian" CHECK (ngay_xu_ly IS NULL OR ngay_xu_ly >= ngay_gui)
);

CREATE TABLE "khao_sat" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "tieu_de" varchar(255) NOT NULL,
  "mo_ta" text,
  "trang_thai" trang_thai_khao_sat NOT NULL DEFAULT 'nhap',
  "nguoi_tao_id" bigint NOT NULL,
  "ngay_tao" timestamptz NOT NULL DEFAULT (now()),
  "ngay_phat_hanh" timestamptz,
  "ngay_ket_thuc" timestamptz,
  CONSTRAINT "ck_khao_sat_tieu_de" CHECK (length(trim(tieu_de)) > 0),
  CONSTRAINT "ck_khao_sat_phat_hanh" CHECK ((trang_thai = 'nhap' AND ngay_phat_hanh IS NULL) OR (trang_thai <> 'nhap' AND ngay_phat_hanh IS NOT NULL)),
  CONSTRAINT "ck_khao_sat_thoi_gian" CHECK (ngay_ket_thuc IS NULL OR ngay_phat_hanh IS NULL OR ngay_ket_thuc > ngay_phat_hanh)
);

CREATE TABLE "cau_hoi" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "khao_sat_id" bigint NOT NULL,
  "noi_dung" text NOT NULL,
  "thu_tu" int NOT NULL,
  "bat_buoc" boolean NOT NULL DEFAULT true,
  CONSTRAINT "ck_cau_hoi_thu_tu" CHECK (thu_tu > 0),
  CONSTRAINT "ck_cau_hoi_noi_dung" CHECK (length(trim(noi_dung)) > 0)
);

CREATE TABLE "lua_chon" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "cau_hoi_id" bigint NOT NULL,
  "noi_dung" varchar(500) NOT NULL,
  "thu_tu" int NOT NULL,
  CONSTRAINT "ck_lua_chon_thu_tu" CHECK (thu_tu > 0),
  CONSTRAINT "ck_lua_chon_noi_dung" CHECK (length(trim(noi_dung)) > 0)
);

CREATE TABLE "phan_phoi_khao_sat" (
  "khao_sat_id" bigint NOT NULL,
  "khach_hang_id" bigint NOT NULL,
  "ngay_gui" timestamptz NOT NULL DEFAULT (now()),
  "ngay_hoan_thanh" timestamptz,
  CONSTRAINT "ck_phan_phoi_thoi_gian" CHECK (ngay_hoan_thanh IS NULL OR ngay_hoan_thanh >= ngay_gui),
  PRIMARY KEY ("khao_sat_id", "khach_hang_id")
);

CREATE TABLE "cau_tra_loi" (
  "khao_sat_id" bigint NOT NULL,
  "khach_hang_id" bigint NOT NULL,
  "cau_hoi_id" bigint NOT NULL,
  "lua_chon_id" bigint NOT NULL,
  PRIMARY KEY ("khao_sat_id", "khach_hang_id", "cau_hoi_id")
);

CREATE INDEX ON "tai_khoan" ("chi_nhanh_id");

CREATE INDEX ON "tai_khoan" ("vai_tro", "trang_thai");

CREATE INDEX ON "khach_hang" ("so_thich_id");

CREATE INDEX ON "khach_hang" ("nam_sinh");

CREATE INDEX ON "phan_hoi" ("trang_thai", "ngay_gui");

CREATE INDEX ON "phan_hoi" ("khach_hang_id", "ngay_gui");

CREATE INDEX ON "phan_hoi" ("do_uong_id", "ngay_gui");

CREATE INDEX ON "phan_hoi" ("chi_nhanh_id");

CREATE INDEX ON "khao_sat" ("nguoi_tao_id");

CREATE INDEX ON "khao_sat" ("trang_thai", "ngay_ket_thuc");

CREATE UNIQUE INDEX ON "cau_hoi" ("khao_sat_id", "thu_tu");

CREATE UNIQUE INDEX ON "cau_hoi" ("id", "khao_sat_id");

CREATE UNIQUE INDEX ON "lua_chon" ("cau_hoi_id", "thu_tu");

CREATE UNIQUE INDEX ON "lua_chon" ("id", "cau_hoi_id");

CREATE INDEX ON "phan_phoi_khao_sat" ("khach_hang_id", "ngay_hoan_thanh");

CREATE INDEX ON "cau_tra_loi" ("cau_hoi_id", "khao_sat_id");

CREATE INDEX ON "cau_tra_loi" ("lua_chon_id", "cau_hoi_id");

COMMENT ON TABLE "chi_nhanh" IS 'Danh mục chi nhánh; một khách hàng dùng chung tài khoản trên toàn chuỗi.';

COMMENT ON TABLE "tai_khoan" IS 'Tên đăng nhập được trigger chuyển thành chữ thường và bỏ khoảng trắng hai đầu. Vai trò dùng để phân quyền ở backend.';

COMMENT ON COLUMN "tai_khoan"."mat_khau_hash" IS 'Băm mật khẩu tại backend; không lưu mật khẩu gốc';

COMMENT ON COLUMN "tai_khoan"."chi_nhanh_id" IS 'Nơi làm việc của manager/staff; khách hàng để NULL';

COMMENT ON COLUMN "tai_khoan"."nguoi_tao_id" IS 'NULL khi tự đăng ký hoặc tạo admin ban đầu';

COMMENT ON TABLE "nhom_so_thich" IS 'Ví dụ: Trà sữa truyền thống; Cà phê muối; Trà trái cây nhiệt đới; Ít ngọt/Healthy. Đây là nhóm sở thích, không phải món cụ thể.';

COMMENT ON TABLE "khach_hang" IS 'Mỗi tài khoản customer có đúng một hồ sơ; kiểm tra cuối transaction. Mỗi khách có một sở thích mặc định theo đề.';

COMMENT ON COLUMN "khach_hang"."nam_sinh" IS 'Từ 1900 đến năm hiện tại; trigger kiểm tra cận trên';

COMMENT ON TABLE "do_uong" IS 'Danh mục để chọn khi phản hồi; chưa bao gồm đơn hàng, giá bán hoặc tồn kho.';

COMMENT ON COLUMN "phan_hoi"."chi_nhanh_id" IS 'NULL nếu khách phản hồi chung về sản phẩm';

COMMENT ON TABLE "khao_sat" IS 'Luồng trạng thái: nhap -> dang_mo -> da_dong. Hết hạn cũng chặn nộp dù chưa chuyển trạng thái. Khóa nội dung sau phát hành.';

COMMENT ON COLUMN "khao_sat"."ngay_ket_thuc" IS 'NULL nghĩa là chưa đặt hạn; vẫn có thể đóng thủ công';

COMMENT ON TABLE "cau_hoi" IS 'Mỗi câu là trắc nghiệm chọn một; tối thiểu hai lựa chọn khi phát hành.';

COMMENT ON TABLE "phan_phoi_khao_sat" IS 'Danh sách người nhận cố định tại lần phát hành. Khách đăng ký sau không tự được thêm. Khách bị khóa sau khi nhận vẫn nằm trong mẫu số.';

COMMENT ON COLUMN "phan_phoi_khao_sat"."ngay_hoan_thanh" IS 'NULL: chưa nộp; có giá trị: đã nộp. Không lưu nháp câu trả lời.';

COMMENT ON TABLE "cau_tra_loi" IS 'Ba khóa ngoại ghép bảo đảm đúng người nhận, đúng khảo sát và đúng đáp án của câu hỏi.';

ALTER TABLE "khach_hang" ADD FOREIGN KEY ("tai_khoan_id") REFERENCES "tai_khoan" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "tai_khoan" ADD FOREIGN KEY ("chi_nhanh_id") REFERENCES "chi_nhanh" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "tai_khoan" ADD FOREIGN KEY ("nguoi_tao_id") REFERENCES "tai_khoan" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "khach_hang" ADD FOREIGN KEY ("so_thich_id") REFERENCES "nhom_so_thich" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "phan_hoi" ADD FOREIGN KEY ("khach_hang_id") REFERENCES "khach_hang" ("tai_khoan_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "phan_hoi" ADD FOREIGN KEY ("do_uong_id") REFERENCES "do_uong" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "phan_hoi" ADD FOREIGN KEY ("chi_nhanh_id") REFERENCES "chi_nhanh" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "phan_hoi" ADD FOREIGN KEY ("nguoi_xu_ly_id") REFERENCES "tai_khoan" ("id") ON DELETE SET NULL DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "khao_sat" ADD FOREIGN KEY ("nguoi_tao_id") REFERENCES "tai_khoan" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cau_hoi" ADD FOREIGN KEY ("khao_sat_id") REFERENCES "khao_sat" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "lua_chon" ADD FOREIGN KEY ("cau_hoi_id") REFERENCES "cau_hoi" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "phan_phoi_khao_sat" ADD FOREIGN KEY ("khao_sat_id") REFERENCES "khao_sat" ("id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "phan_phoi_khao_sat" ADD FOREIGN KEY ("khach_hang_id") REFERENCES "khach_hang" ("tai_khoan_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cau_tra_loi" ADD FOREIGN KEY ("khao_sat_id", "khach_hang_id") REFERENCES "phan_phoi_khao_sat" ("khao_sat_id", "khach_hang_id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cau_tra_loi" ADD FOREIGN KEY ("cau_hoi_id", "khao_sat_id") REFERENCES "cau_hoi" ("id", "khao_sat_id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "cau_tra_loi" ADD FOREIGN KEY ("lua_chon_id", "cau_hoi_id") REFERENCES "lua_chon" ("id", "cau_hoi_id") ON DELETE RESTRICT DEFERRABLE INITIALLY IMMEDIATE;

COMMIT;
